--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="add_to_my_devices">Add to my devices</string>
     <string name="check_readme">Check README on github</string>
     <string name="github_link" translatable="false"><u>https://github.com/rpuxa/SuperWirelessAdb</u></string>
+    <string name="nearest_devices_not_found">Nearest devices not found</string>
+    <string name="you_are_not_add">My devices list is empty</string>
 </resources>
 
 
