--- a/android/src/main/res/values-ru-rRU/strings.xml
+++ b/android/src/main/res/values-ru-rRU/strings.xml
@@ -31,5 +31,6 @@
     <string name="check_readme">Прочитайте README на github</string>
     <string name="you_are_not_add">Вы не добавили ни одного устройства</string>
     <string name="nearest_devices_not_found">Ближайшие устройства не найдены</string>
+    <string name="adb_not_found">Папка с ADB не найдена</string>
 
 </resources>
